load("@crates_mcp_re//:defs.bzl", "all_crate_deps")
load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-010 object conformance runner library: vector model + Target trait +
# in-process ObjectTarget + RunReport. Depends on the pure mcp-re-core crate
# (cross-crate label) plus serde/serde_json from the isolated crates_mcp_re hub.
# mcp-re-conformance MAY use std::fs (loader); mcp-re-core stays pure (ADR-011/012).
nt_rust_library(
    name = "mcp_re_conformance",
    srcs = [
        "src/http.rs",
        "src/lib.rs",
        "src/loader.rs",
        "src/vector.rs",
    ],
    crate_name = "mcp_re_conformance",
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-proxy:mcp_re_proxy",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-034 (extends ADR-MCPS-030): method-transparency behavioral
# equivalence proof. Varies ONLY the JSON-RPC method (re-signing each, since
# method is in signing scope) across tools/list, tools/call, resources/list,
# prompts/list, and a fabricated x/nonexistent/custom, and asserts the Core
# verdict is IDENTICAL for an accepted envelope and (separately) a rejected one.
nt_rust_test(
    name = "method_transparency_test",
    srcs = ["tests/method_transparency_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_conformance",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-034 (extends ADR-MCPS-030): static method-name drift guard. Scans the
# NON-TEST mcp-re-core/src for banned concrete MCP method-name literals
# (tools/list, tools/call, resources/list, resources/read, prompts/list,
# prompts/get, sampling/createMessage, completion/complete) and FAILS if any is
# added to production Core. The Core src tree is delivered as data (runfiles);
# the guard resolves lib.rs and scans its parent dir from DISK, with the
# mcp-re-test-paths cargo fallback — the same scheme as the drift_guard.
nt_rust_test(
    name = "method_name_drift_guard_test",
    srcs = ["tests/method_name_drift_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcp-re-core:src_files",
        "//mcp-re-core:src/lib.rs",
    ],
    edition = "2021",
    env = {
        "MCP_RE_CORE_SRC_LIB": "$(rlocationpath //mcp-re-core:src/lib.rs)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-035: audit-evidence vocabulary drift guard. Asserts the MCP-RE audit
# vocabulary (mcp-re-core/src/audit.rs) derives every rejection reason from the
# frozen McpReError::wire_code() taxonomy (mcp-re-core/src/error.rs is the sole
# authority) and that the success-event set is EXACTLY the two-item allowlist.
# Both Core source files are delivered as data (runfiles); the guard reads them
# from DISK (via $(rlocationpath), with the mcp-re-test-paths cargo fallback) — the
# same scheme as the method-name drift guard — so a newly added McpReError variant
# (new frozen wire_code) or an edited audit vocabulary is re-read from reality.
nt_rust_test(
    name = "audit_vocabulary_guard_test",
    srcs = ["tests/audit_vocabulary_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//mcp-re-core:src_files",
        "//mcp-re-core:src/error.rs",
        "//mcp-re-core:src/audit.rs",
    ],
    edition = "2021",
    env = {
        "MCP_RE_CORE_SRC_ERROR": "$(rlocationpath //mcp-re-core:src/error.rs)",
        "MCP_RE_CORE_SRC_AUDIT": "$(rlocationpath //mcp-re-core:src/audit.rs)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",
    ],
)

# ADR-MCPS-036 (gate item 4): forbidden-claim guard. Scans the proposal-facing
# docs (security-boundary, v0.5 claim matrix, threat-coverage, composability,
# proposal-scope) from DISK (via runfiles) and FAILS if any forbidden over-claim
# wording appears as an ASSERTED (live) claim — a phrase inside a "Forbidden
# claim" table column or a negated sentence is legitimately NAMING the non-goal
# and is allowed. The optional add-on asserts docs/SECURITY_BOUNDARY.md is a
# redirect stub with no live claim (ADR-MCPS-032). Docs delivered as data
# ($(rlocationpath)), with the mcp-re-test-paths cargo fallback — the same scheme
# as the drift_guard / method-name drift guard. Proposal-facing docs ONLY: no
# historical ADRs, no v0.3 files, no fixtures.
nt_rust_test(
    name = "forbidden_claim_guard_test",
    srcs = ["tests/forbidden_claim_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "//docs:SECURITY_BOUNDARY.md",
        "//docs:spec/security-boundary.md",
        "//docs:spec/v0.5-claim-matrix.md",
        "//docs:spec/threat-coverage-matrix.md",
        "//docs:spec/composability.md",
        "//docs:spec/proposal-scope.md",
    ],
    edition = "2021",
    env = {
        "MCP_RE_DOC_SECURITY_BOUNDARY": "$(rlocationpath //docs:spec/security-boundary.md)",
        "MCP_RE_DOC_CLAIM_MATRIX": "$(rlocationpath //docs:spec/v0.5-claim-matrix.md)",
        "MCP_RE_DOC_THREAT_COVERAGE": "$(rlocationpath //docs:spec/threat-coverage-matrix.md)",
        "MCP_RE_DOC_COMPOSABILITY": "$(rlocationpath //docs:spec/composability.md)",
        "MCP_RE_DOC_PROPOSAL_SCOPE": "$(rlocationpath //docs:spec/proposal-scope.md)",
        "MCP_RE_DOC_SECURITY_BOUNDARY_STUB": "$(rlocationpath //docs:SECURITY_BOUNDARY.md)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",
    ],
)

# MCPS-070: security traceability manifest drift guard. The committed
# security_traceability_manifest.json maps each MCP-RE security property
# (P6.6A + P6.6B) to the Bazel test target + test fn that proves it. This guard
# reads the manifest, every relevant BUILD.bazel, and every referenced test
# source from DISK (via runfiles) and FAILS on drift: a manifest target no
# BUILD.bazel declares as nt_rust_test, a manifest test_fn absent from its source
# file, a source/target package mismatch, a stale recorded count, or a missing
# server-auth case. Renames/removals are caught by re-reading reality.
nt_rust_test(
    name = "security_traceability_guard_test",
    srcs = ["tests/security_traceability_guard_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = [
        "security_traceability_manifest.json",
        "BUILD.bazel",
        "tests/method_transparency_test.rs",
        "tests/method_name_drift_guard_test.rs",
        "tests/rfc9421_security_properties_test.rs",
        "tests/audit_vocabulary_guard_test.rs",
        "tests/forbidden_claim_guard_test.rs",
        "//docs:spec/v0.5-claim-matrix.md",
        "//mcp-re-core:BUILD.bazel",
        "//mcp-re-host:BUILD.bazel",
        "//mcp-re-policy:BUILD.bazel",
        "//mcp-re-proxy:BUILD.bazel",
        "//mcp-re-proxy:tests/key_source_test.rs",
        "//mcp-re-proxy:tests/dev_env_key_source_test.rs",
        # MCPRE-122 (ADR-MCPRE-052): the delegated-required validation matrix sources.
        "//mcp-re-proxy:tests/delegated_serving_test.rs",
        "//mcp-re-proxy:tests/delegated_production_wiring_test.rs",
        "//mcp-re-proxy:tests/delegated_client_server_e2e_test.rs",
        "tests/delegation_vectors_test.rs",
        # MCPS-62 (ADR-MCPS-023 §C, v0.10 Mode C): serve-level attested-ingress
        # conformance vectors + the in-crate cli.rs Mode-C guards / Mode-B rejection.
        "//mcp-re-proxy:src/cli.rs",
        # MCPS-72 (#252): KMS-lifecycle offline negatives are in-crate #[cfg(test)]
        # unit tests, so the guard reads their src/*.rs (not tests/*.rs) from disk.
        "//mcp-re-proxy:src/kms_keysource.rs",
        "//mcp-re-proxy:src/gcp_kms_keysource.rs",
        "//mcp-re-proxy:src/aws_kms_keysource.rs",
        "//mcp-re-demo:BUILD.bazel",
        "//mcp-re-transport:BUILD.bazel",
        "//mcp-re-transport:tests/mtls_client_test.rs",
    ],
    edition = "2021",
    env = {
        "MCP_RE_SECURITY_MANIFEST": "$(rlocationpath security_traceability_manifest.json)",
        "MCP_RE_BUILD_CONFORMANCE": "$(rlocationpath BUILD.bazel)",
        "MCP_RE_BUILD_CORE": "$(rlocationpath //mcp-re-core:BUILD.bazel)",
        "MCP_RE_BUILD_HOST": "$(rlocationpath //mcp-re-host:BUILD.bazel)",
        "MCP_RE_BUILD_POLICY": "$(rlocationpath //mcp-re-policy:BUILD.bazel)",
        "MCP_RE_BUILD_PROXY": "$(rlocationpath //mcp-re-proxy:BUILD.bazel)",
        "MCP_RE_BUILD_DEMO": "$(rlocationpath //mcp-re-demo:BUILD.bazel)",
        "MCP_RE_BUILD_TRANSPORT": "$(rlocationpath //mcp-re-transport:BUILD.bazel)",
        "MCP_RE_CLAIM_MATRIX": "$(rlocationpath //docs:spec/v0.5-claim-matrix.md)",
        "MCP_RE_SRC_METHOD_TRANSPARENCY": "$(rlocationpath tests/method_transparency_test.rs)",
        "MCP_RE_SRC_METHOD_NAME_DRIFT_GUARD": "$(rlocationpath tests/method_name_drift_guard_test.rs)",
        "MCP_RE_SRC_RFC9421_SECURITY_PROPERTIES": "$(rlocationpath tests/rfc9421_security_properties_test.rs)",
        "MCP_RE_SRC_AUDIT_VOCABULARY_GUARD": "$(rlocationpath tests/audit_vocabulary_guard_test.rs)",
        "MCP_RE_SRC_FORBIDDEN_CLAIM_GUARD": "$(rlocationpath tests/forbidden_claim_guard_test.rs)",
        "MCP_RE_SRC_CLI": "$(rlocationpath //mcp-re-proxy:src/cli.rs)",
        "MCP_RE_SRC_KMS_KEYSOURCE": "$(rlocationpath //mcp-re-proxy:src/kms_keysource.rs)",
        "MCP_RE_SRC_GCP_KMS_KEYSOURCE": "$(rlocationpath //mcp-re-proxy:src/gcp_kms_keysource.rs)",
        "MCP_RE_SRC_AWS_KMS_KEYSOURCE": "$(rlocationpath //mcp-re-proxy:src/aws_kms_keysource.rs)",
        "MCP_RE_SRC_KEY_SOURCE": "$(rlocationpath //mcp-re-proxy:tests/key_source_test.rs)",
        "MCP_RE_SRC_DEV_ENV_KEY_SOURCE": "$(rlocationpath //mcp-re-proxy:tests/dev_env_key_source_test.rs)",
        "MCP_RE_SRC_DELEGATED_SERVING": "$(rlocationpath //mcp-re-proxy:tests/delegated_serving_test.rs)",
        "MCP_RE_SRC_DELEGATED_PROD_WIRING": "$(rlocationpath //mcp-re-proxy:tests/delegated_production_wiring_test.rs)",
        "MCP_RE_SRC_DELEGATED_E2E": "$(rlocationpath //mcp-re-proxy:tests/delegated_client_server_e2e_test.rs)",
        "MCP_RE_SRC_DELEGATION_VECTORS": "$(rlocationpath tests/delegation_vectors_test.rs)",
        "MCP_RE_SRC_MTLS_CLIENT": "$(rlocationpath //mcp-re-transport:tests/mtls_client_test.rs)",
    },
    deps = [
        "//mcp-re-test-paths:mcp_re_test_paths",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-050 (seed Work Item 4): the HTTP standards-profile conformance
# corpus — frozen fixtures + static oracle under tests/vectors/http-profile/,
# verified black-box against the committed bytes (writer test is #[ignore]d).
# Same dual-mode fixture bridge as mcp-re-core's draft-02 corpus: Bazel passes
# the manifest rlocationpath; Cargo reads the source tree.
nt_rust_test(
    name = "http_profile_vectors_test",
    srcs = ["tests/http_profile_vectors_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = glob(["tests/vectors/http-profile/**"]),
    edition = "2021",
    env = {
        "MCP_RE_HTTP_PROFILE_VECTORS_MANIFEST": "$(rlocationpath tests/vectors/http-profile/manifest.json)",
    },
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-050 / MCPRE-99: external -> us direction of the RFC 9421 cross-
# verification gate. Verifies a signature produced by an INDEPENDENT RFC 9421
# implementation (python-cryptography, committed as external_kat.json) under the
# Rust MCP-RE verifier. The ours -> external direction is the pinned Python gate
# in tools/rfc9421_cross_verify.py (see .github/workflows/ci.yml).
nt_rust_test(
    name = "rfc9421_cross_verification_test",
    srcs = ["tests/rfc9421_cross_verification_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = glob(["tests/vectors/http-profile/**"]),
    edition = "2021",
    env = {
        "MCP_RE_HTTP_PROFILE_VECTORS_MANIFEST": "$(rlocationpath tests/vectors/http-profile/manifest.json)",
    },
    deps = [
        "//mcp-re-core:mcp_re_core",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-052 §9 (MCPRE-122): the delegated-signing conformance corpus —
# frozen compact-JWS credential + delegated-key RFC 9421 response fixtures under
# tests/vectors/delegation-profile/, verified black-box through
# verify_delegated_response_full (writer test is #[ignore]d). Same dual-mode
# fixture bridge as the http-profile corpus.
nt_rust_test(
    name = "delegation_vectors_test",
    srcs = ["tests/delegation_vectors_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = glob(["tests/vectors/delegation-profile/**"]),
    edition = "2021",
    env = {
        "MCP_RE_DELEGATION_VECTORS_MANIFEST": "$(rlocationpath tests/vectors/delegation-profile/manifest.json)",
    },
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-052 §9 / MCPRE-122: external -> us direction of the JOSE/JWS cross-
# verification gate. Verifies a compact-JWS delegation credential produced by an
# INDEPENDENT JOSE/EdDSA implementation (python-cryptography, committed as
# external_delegation_kat.json) under the Rust verifier, and confirms our issuer
# reproduces its bytes. The ours -> external direction is the pinned Python gate
# in tools/jose_cross_verify.py (see .github/workflows/ci.yml).
nt_rust_test(
    name = "delegation_cross_verification_test",
    srcs = ["tests/delegation_cross_verification_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = glob(["tests/vectors/delegation-profile/**"]),
    edition = "2021",
    env = {
        "MCP_RE_DELEGATION_VECTORS_MANIFEST": "$(rlocationpath tests/vectors/delegation-profile/manifest.json)",
    },
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
        "@crates_mcp_re//:serde",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-050 / MCPRE-103: full-profile PARITY GATE. Drives the integrated
# live path (verify_request_full -> dispatch_request -> verify_response_full) and
# asserts every acceptance behaviour (#1-#6: body tamper, response splice,
# request_evidence mismatch, artifact mismatch, replay, MRTR continuation)
# rejects through the integrated verifier — proving the body blocks, replay key,
# and continuation binding are ACTIVE, not merely corpus-defined. Acceptance #7
# (third-party RFC 9421 interop) is the separate rfc9421_cross_verification_test
# + CI no-merge gate (MCPRE-99), cited but not re-executed here.
nt_rust_test(
    name = "full_profile_parity_test",
    srcs = ["tests/full_profile_parity_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
    ],
)

# ADR-MCPRE-050 §A witnesses: the RFC 9421 security-property proofs that map each §A
# capability-claim-matrix row to a green test (the go-forward replacement for the
# deleted object suite). One named test per §A capability.
nt_rust_test(
    name = "rfc9421_security_properties_test",
    srcs = ["tests/rfc9421_security_properties_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-http-profile:mcp_re_http_profile",
    ],
)
