load("@crates_mcp_re//:defs.bzl", "all_crate_deps")
load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-011/012: mcp-re-core stays pure (no networking / async / filesystem).
# Crate deps come from the isolated `crates_mcp_re` crate_universe hub
# (serde, serde_json, ed25519-dalek, sha2, base64, thiserror; dev: hex).
nt_rust_library(
    name = "mcp_re_core",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_core",
    edition = "2021",
    deps = all_crate_deps(normal = True),
)

nt_rust_test(
    name = "mcp_re_core_test",
    crate = ":mcp_re_core",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = all_crate_deps(normal_dev = True),
)

# MCPS-002: conformance-vector generator + golden + Phase-1 primitive assertions.
# The committed JSON fixtures are embedded at compile time via include_str!
# (no runtime filesystem / runfiles), so they go in compile_data. The #[ignore]d
# `write_fixtures` test is the only writer and is skipped here.
# Committed conformance vectors (manifest + per-vector fixtures). Exposed so the
# mcp-re-conformance object runner can embed them (compile_data + include_str!) as
# the SINGLE SOURCE OF TRUTH — no duplication into the conformance crate.
filegroup(
    name = "vectors",
    srcs = glob(["tests/vectors/**"]),
)

# ADR-MCPS-034: the Core source tree, exposed so the method-name drift guard in
# mcp-re-conformance can scan non-test mcp-re-core/src for banned MCP method-name
# literals from DISK (via runfiles) — the same data-dep scheme the conformance
# drift_guard uses for the vector fixtures.
filegroup(
    name = "src_files",
    srcs = glob(["src/**/*.rs"]),
)

nt_rust_test(
    name = "vectors_test",
    srcs = ["tests/vectors_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = glob(["tests/vectors/**"]),
    edition = "2021",
    deps = [
        ":mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-075 (audit gap G-1): property-based testing of the JCS canonicalizer.
# Black-box — drives only the crate-root public API. Pinned 4096-case proptest
# config with failure_persistence disabled (read-only sandbox); the durable
# corpus is the committed inline SEED_CORPUS asserted with plain #[test]s.
nt_rust_test(
    name = "canonicalizer_proptest",
    srcs = ["tests/canonicalizer_proptest.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_core",
        "@crates_mcp_re//:proptest",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-024: multi round-trip (SEP-2322) replay conformance — per-leg
# independence, requestState untrusted, fresh-nonce-per-leg/retry.
nt_rust_test(
    name = "multi_round_trip_test",
    srcs = ["tests/multi_round_trip_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-026: signed/unsigned _meta partition (SEP-2575) — trace context
# excluded from the preimage, protocolVersion in scope.
nt_rust_test(
    name = "signing_scope_test",
    srcs = ["tests/signing_scope_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPS-041 (MCPS-76, gate-discovered by MCPS-70): draft-02 committed-corpus
# conformance. Live assertions read the corpus from disk; under Bazel the source
# tree is unavailable at runtime, so the fixtures ship as `data` and the test
# resolves them via MCP_RE_CORE_VECTORS_MANIFEST (rlocationpath of the draft-01
# manifest, whose parent is the vectors root — see vectors_root() in the test).
# The #[ignore]d write_draft02_fixtures writer is skipped.
nt_rust_test(
    name = "draft02_vectors_test",
    srcs = ["tests/draft02_vectors_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = glob(["tests/vectors/**"]),
    edition = "2021",
    env = {
        "MCP_RE_CORE_VECTORS_MANIFEST": "$(rlocationpath tests/vectors/manifest.json)",
    },
    deps = [
        ":mcp_re_core",
        "@crates_mcp_re//:serde_json",
    ],
)

# ADR-MCPRE-051 "Compliance and Enforcement": the core purity firewall. Reads the
# committed Cargo.toml + BUILD.bazel at compile time (include_str!) and fails on
# any networking/async/fs or up-stack crate in the declared deps — encoding the
# ADR-051 split (core pure; the async stack is admitted into the proxy serving
# path only). They must be compile inputs in the sandbox.
nt_rust_test(
    name = "firewall_test",
    srcs = ["tests/firewall_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    compile_data = [
        "Cargo.toml",
        "BUILD.bazel",
    ],
    edition = "2021",
    deps = [
        ":mcp_re_core",
    ],
)
